src/test/data/tests/const/invalid/undefined_global.c
const int a;
const int b = a;

int main(void) {
    return 0;
}
